manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"backendconfig-test"}}'
  labels:
    app: nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
